# trading_bot

./: .gitignore  README.md  SESSION_SUMMARY.md  pyproject.toml  requirements.txt  setup.sh
data/: AAPL_1Day_2016-04-17_2026-04-15.parquet  AAPL_1Day_2019-04-17_2026-04-15.parquet  AAPL_1Day_2021-04-16_2026-04-15.parquet  AAPL_1Day_2022-04-16_2026-04-15.parquet  AAPL_1Day_2023-04-16_2026-04-15.parquet  AAPL_1Day_2024-04-15_2026-04-15.parquet  AAPL_1Day_2025-04-15_2026-04-15.parquet  ADBE_1Day_2016-04-17_2026-04-15.parquet  ADBE_1Day_2019-04-17_2026-04-15.parquet  ADBE_1Day_2021-04-16_2026-04-15.parquet  ADBE_1Day_2022-04-16_2026-04-15.parquet  ADBE_1Day_2023-04-16_2026-04-15.parquet  ADBE_1Day_2024-04-15_2026-04-15.parquet  ADBE_1Day_2025-04-15_2026-04-15.parquet  AMD_1Day_2016-04-17_2026-04-15.parquet  AMD_1Day_2019-04-17_2026-04-15.parquet  AMD_1Day_2021-04-16_2026-04-15.parquet  AMD_1Day_2022-04-16_2026-04-15.parquet  AMD_1Day_2023-04-16_2026-04-15.parquet  AMD_1Day_2024-04-15_2026-04-15.parquet  AMD_1Day_2025-04-15_2026-04-15.parquet  AMZN_1Day_2016-04-17_2026-04-15.parquet  AMZN_1Day_2019-04-17_2026-04-15.parquet  AMZN_1Day_2021-04-16_2026-04-15.parquet  AMZN_1Day_2022-04-16_2026-04-15.parquet  AMZN_1Day_2023-04-16_2026-04-15.parquet  AMZN_1Day_2024-04-15_2026-04-15.parquet  AMZN_1Day_2025-04-15_2026-04-15.parquet  ASML_1Day_2016-04-17_2026-04-15.parquet  ASML_1Day_2019-04-17_2026-04-15.parquet  ASML_1Day_2021-04-16_2026-04-15.parquet  ASML_1Day_2022-04-16_2026-04-15.parquet  ASML_1Day_2023-04-16_2026-04-15.parquet  ASML_1Day_2024-04-15_2026-04-15.parquet  ASML_1Day_2025-04-15_2026-04-15.parquet  AVGO_1Day_2016-04-17_2026-04-15.parquet  AVGO_1Day_2019-04-17_2026-04-15.parquet  AVGO_1Day_2021-04-16_2026-04-15.parquet  AVGO_1Day_2022-04-16_2026-04-15.parquet  AVGO_1Day_2023-04-16_2026-04-15.parquet  (+73 more)
src/data/: AAPL_1Day_2025-04-17_2026-04-17.parquet  ADBE_1Day_2025-04-17_2026-04-17.parquet  AMD_1Day_2025-04-17_2026-04-17.parquet  AMZN_1Day_2025-04-17_2026-04-17.parquet  ASML_1Day_2025-04-17_2026-04-17.parquet  AVGO_1Day_2025-04-17_2026-04-17.parquet  CRM_1Day_2025-04-17_2026-04-17.parquet  ENPH_1Day_2025-04-17_2026-04-17.parquet  FSLR_1Day_2025-04-17_2026-04-17.parquet  F_1Day_2025-04-17_2026-04-17.parquet  GM_1Day_2025-04-17_2026-04-17.parquet  GOOGL_1Day_2025-04-17_2026-04-17.parquet  INTC_1Day_2025-04-17_2026-04-17.parquet  LCID_1Day_2025-04-17_2026-04-17.parquet  LI_1Day_2025-04-17_2026-04-17.parquet  META_1Day_2025-04-17_2026-04-17.parquet  (+13 more)
tests/: __init__.py  conftest.py  test_data_loader.py  test_look_ahead_bias.py  test_paper_trading.py
(+60 files in other folders)
